--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,17 @@ body{
 
   font-family:Georgia, 'Times New Roman', Times, serif;
   background-image:url("../images/criss-cross.png");
-} 
+}
+hr{
+  border-top-width: 2px;
+}
 .footer{
 position: fixed;
 left: 0;
 bottom: 0;
 width: 100%;
 text-align: center;
+margin-top: 20px;
 }
 .card-1{
   background-image:url("../images/Apple.png");
@@ -16,5 +20,17 @@ text-align: center;
 }
 .card-2{
   background-image:url("../images/Flag.png");
+  width:100px;
+}
+.card-3{
+  background-image:url("../images/mario.png");
+  width: 100px;
+}
+.card-4{
+  background-image: url("../images/web design.png");
+  width:100px;
+}
+.card-5{
+  background-image: url("../images/Tbilisi\ My\ City.jpg");
   width:100px;
 }
